# lib_jsl

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
benches/: fft_race.rs  rust_fft_wrapper.rs
examples/: gen_dsp_windows_goldens.rs  gen_remez_goldens.rs
src/: lib.rs  prelude.rs
src/derivatives/: derivatives_1d_scalar.rs  derivatives_vectors.rs
src/dsp/: convolve.rs  cross_correlation.rs  sinc.rs  stream_operator.rs  windows.rs
src/fft/: best_fft.rs  optimized_radix2.rs  rust_fft_wrapper.rs  simd_fft.rs  simd_fft_riscv.rs  simple_cooley_tukey.rs  test_bench_data.rs
src/ffts/: best_fft.rs  bluestein_fft.rs  fft_engine_trait.rs  optimized_radix2.rs  optimized_split_radix.rs  rust_fft_wrapper.rs  simd_fft.rs  simd_fft_x86.rs  simple_cooley_tukey.rs  test_bench_data.rs
src/filters/: linear_filter.rs
src/integration/: adaptive_gl7k15_integration_engine.rs  adaptive_trapezoid_integration_engine.rs  calculate_midpoints.rs  can_integrate.rs  dormand_prince.rs  midpoint_integration_engine.rs  monte_carlo_integration.rs  runge_kutta_4.rs  simpsons_1_3_integration_engine.rs  trapezoidal_integration_engine.rs
src/interpolation/: interpolation_trait.rs  linear_interpolator.rs  natural_cubic_spline_interpolator.rs  polynomial_interpolator.rs
src/number_theory/: base_exponent_in_modulus.rs  greatest_common_divisor.rs  integer_square_root.rs  multiplicative_inverse_modulo.rs  text_coded_integer.rs
src/optimization/: golden_section_search.rs  gradient_descent.rs  nelder_mead_method.rs  newton_raphson_method.rs  optimization_traits.rs  (+1 more)
(+71 files in other folders)
