[package]
name = "lib_jsl"
version = "0.1.0"
edition = "2024"

[dependencies]
num = "*"
ndarray = { version = "*", features = ["blas"] }
ndarray-linalg = { version = "*", features = ["openblas-system"] }   
rustfft = "6"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "fft_race"
harness = false
