[package]
name = "lib_jsl"
version = "0.1.0"
edition = "2024"

[dependencies]
num = "*"
ndarray = { version = "*", features = ["blas"] }
ndarray-linalg = { version = "*", features = ["openblas-system"] }   

[dev-dependencies]
criterion = "*"
rustfft = "*"

[[bench]]
name = "fft_race"
harness = false
